--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <br>
         <button class="btn btn-danger" style="font-weight: bold; height: 40px; width: 100px;">Song Name</button>
     </center>
+    <script src="main.js"></script>
 </body>
 
 </html>
